checkpoint, working on managing blocklists.  for large segments, which happen when the level factor is 10, the blocklist was getting enormous, and keeping it up to date in the header was consuming tons of CPU time.  this commit removes it from the header.  for the purpose of needs_merge, which needs to know the size of a segment, parent pages now have a descendant page count for its child.  the other main use of that block list was at startup when it needs to get a full block list of every segment in order to calculate which pages are free.  as a consequence of all this, the merge code which calculates inactive pages is now very different.  the verification purposes, the old code is still present.  the old code started by saying that all segments involved in the merge become inactive, and then after the merge was done, anything in the new from segment or new dest segment was removed from the inactive list.  the new code tries to build the inactive list from the bottom up instead.  it specifically adds things to the inactive list because it knows they are becoming so.  this required changes to write_merge to deal with situations where a key in a reused leaf was shadowed by the stuff being promoted.  and it required a similar change in MergeCursor.  overflowed keys still don't work in this situation.  in fact, testing this revealed bigger problems with large keys that need to be fixed later.  another consequence of all this stuff is that rlocks are segment-keyed again instead of always being a subtraction of two blocklists.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,40 @@
 
+parent node writer gets in trouble, overflows its stack,
+when it has to deal with lots of pages that only hold one
+key.
+
+how could the following happen?  was it an overflow that newcode
+thought was eaten/skipped but actually got used?
+
+Young: inactive mismatch: segment 4641
+old count: 0
+new count: 1
+old: BlockList { blocks: [] }
+new: BlockList { blocks: [PageBlock { firstPage: 4641, lastPage: 4641 }] }
+only_in_old: BlockList { blocks: [] }
+only_in_new: BlockList { blocks: [PageBlock { firstPage: 4641, lastPage: 4641 }] }
+
+occasional mis match of inactive lists.  hard to repro.
+off by 1 page in one case.
+
+once saw in inside error.
+
+second run of test suite into same db is really slow.
+probably fragmentation and blocklist stuff.
+
+do we have no cases involving an overflowed key?
+
+previously saw some cases where the new inactive code
+had pages NOT found by the old inactive code.  that's
+gotta be bad.
+
+use the new inactive result as the final, not the old one.
+but they gotta match.
+
+on a merge from Other(n) to Other(n+1), we have been rewriting
+the parent nodes but not adding the old set of parent nodes
+to the inactive list.
+
 perf problem when we run the 5M URL thing with 10x levels.
 most CPU time being used by BlockList::sort_and_consolidate
 within write_parent_page() called by merge, and some from
