refactor merge to allow it to recycle parents as well as leaves.  unfortunately, this makes fragmentation worse.  we still need a knob we can tune to adjust that problem, but even so, this change is a good one, and forcing an entirely new set of parent nodes to be rewritten on every merge was a perf killer for larger segments.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,12 @@
 
+now seeing occasional failure of cursor1.js
+leaf has invalid page type
+add panic
+
+inactive list still match?
+
+make sure recycle of middle nodes is working as I think it is
+
 parent node writer gets in trouble, overflows its stack,
 when it has to deal with lots of pages that only hold one
 key.
