fix rlocks to allow dependency from one segment to another.  in other words, when a merge results in a segment A that has recycled pages from segment B, then A stuff can never be freed until B stuff is freed, because A and B are sharing pages, even though B went inactive during the merge, because B doesn't completely cease to exist until all its cursors are gone, and if B itself had a dependency, recursively as well.

--- a/todo.txt
+++ b/todo.txt
@@ -37,6 +37,8 @@ look for segments dependent on it.
 merge code knows that the dependency always comes from the
 old version of the dest segment.
 
+but overflows can be reused from any segment during merge.
+
 --------
 
 disable the heavy asserts and debugging code to make the
